cmake_minimum_required(VERSION 3.4.1)

add_library( testmain SHARED src/main/cpp/native-lib.cpp )

add_definitions(-D_REENTRANT -DU_COMMON_IMPLEMENTATION -DU_TOOLUTIL_IMPLEMENTATION -DU_I18N_IMPLEMENTATION -D__ANDROID__)
include_directories(src/main/cpp/android-support/include
                    src/main/cpp/icu
                    src/main/cpp/icu/common
                    src/main/cpp/icu/io
                    src/main/cpp/icu/i18n
                    src/main/cpp/icu/tools/ctestfw
                    src/main/cpp/icu/layout
                    )
add_library( testicuuc SHARED
    src/main/cpp/icu/stubdata/stubdata.c
    src/main/cpp/icu/common/cmemory.c
    src/main/cpp/icu/common/cstring.c
    src/main/cpp/icu/common/cwchar.c
    src/main/cpp/icu/common/icuplug.c
    src/main/cpp/icu/common/locmap.c
    src/main/cpp/icu/common/propsvec.c
    src/main/cpp/icu/common/uarrsort.c
    src/main/cpp/icu/common/ubidi.c
    src/main/cpp/icu/common/ubidiln.c
    src/main/cpp/icu/common/ubidiwrt.c
    src/main/cpp/icu/common/ubidi_props.c
    src/main/cpp/icu/common/ucat.c
    src/main/cpp/icu/common/uchar.c
    src/main/cpp/icu/common/ucln_cmn.c
    src/main/cpp/icu/common/ucmndata.c
    src/main/cpp/icu/common/ucnv.c
    src/main/cpp/icu/common/ucnvdisp.c
    src/main/cpp/icu/common/ucnvhz.c
    src/main/cpp/icu/common/ucnvisci.c
    src/main/cpp/icu/common/ucnvlat1.c
    src/main/cpp/icu/common/ucnvmbcs.c
    src/main/cpp/icu/common/ucnvscsu.c
    src/main/cpp/icu/common/ucnv_cb.c
    src/main/cpp/icu/common/ucnv_cnv.c
    src/main/cpp/icu/common/ucnv_ct.c
    src/main/cpp/icu/common/ucnv_err.c
    src/main/cpp/icu/common/ucnv_lmb.c
    src/main/cpp/icu/common/ucnv_set.c
    src/main/cpp/icu/common/ucnv_u16.c
    src/main/cpp/icu/common/ucnv_u32.c
    src/main/cpp/icu/common/ucnv_u7.c
    src/main/cpp/icu/common/ucnv_u8.c
    src/main/cpp/icu/common/udatamem.c
    src/main/cpp/icu/common/udataswp.c
    src/main/cpp/icu/common/uenum.c
    src/main/cpp/icu/common/uhash.c
    src/main/cpp/icu/common/uinvchar.c
    src/main/cpp/icu/common/ulist.c
    src/main/cpp/icu/common/uloc_tag.c
    src/main/cpp/icu/common/umapfile.c
    src/main/cpp/icu/common/umath.c
    src/main/cpp/icu/common/unorm_it.c
    src/main/cpp/icu/common/uresdata.c
    src/main/cpp/icu/common/ures_cnv.c
    src/main/cpp/icu/common/uscript.c
    src/main/cpp/icu/common/usc_impl.c
    src/main/cpp/icu/common/ustrfmt.c
    src/main/cpp/icu/common/ustr_cnv.c
    src/main/cpp/icu/common/utf_impl.c
    src/main/cpp/icu/common/utrace.c
    src/main/cpp/icu/common/utypes.c
    src/main/cpp/icu/common/wintz.c
    src/main/cpp/icu/i18n/ucln_in.c
    src/main/cpp/icu/i18n/decContext.c
    src/main/cpp/icu/i18n/decNumber.c
    src/main/cpp/icu/common/appendable.cpp
    src/main/cpp/icu/common/bmpset.cpp
    src/main/cpp/icu/common/brkeng.cpp
    src/main/cpp/icu/common/brkiter.cpp
    src/main/cpp/icu/common/bytestream.cpp
    src/main/cpp/icu/common/bytestrie.cpp
    src/main/cpp/icu/common/caniter.cpp
    src/main/cpp/icu/common/chariter.cpp
    src/main/cpp/icu/common/charstr.cpp
    src/main/cpp/icu/common/dictbe.cpp
    src/main/cpp/icu/common/dictionarydata.cpp
    src/main/cpp/icu/common/dtintrv.cpp
    src/main/cpp/icu/common/errorcode.cpp
    src/main/cpp/icu/common/filterednormalizer2.cpp
    src/main/cpp/icu/common/locavailable.cpp
    src/main/cpp/icu/common/locbased.cpp
    src/main/cpp/icu/common/locdispnames.cpp
    src/main/cpp/icu/common/locid.cpp
    src/main/cpp/icu/common/loclikely.cpp
    src/main/cpp/icu/common/locresdata.cpp
    src/main/cpp/icu/common/locutil.cpp
    src/main/cpp/icu/common/messagepattern.cpp
    src/main/cpp/icu/common/normalizer2.cpp
    src/main/cpp/icu/common/normalizer2impl.cpp
    src/main/cpp/icu/common/normlzr.cpp
    src/main/cpp/icu/common/parsepos.cpp
    src/main/cpp/icu/common/patternprops.cpp
    src/main/cpp/icu/common/propname.cpp
    src/main/cpp/icu/common/punycode.cpp
    src/main/cpp/icu/common/putil.cpp
    src/main/cpp/icu/common/rbbi.cpp
    src/main/cpp/icu/common/rbbidata.cpp
    src/main/cpp/icu/common/rbbinode.cpp
    src/main/cpp/icu/common/rbbirb.cpp
    src/main/cpp/icu/common/rbbiscan.cpp
    src/main/cpp/icu/common/rbbisetb.cpp
    src/main/cpp/icu/common/rbbistbl.cpp
    src/main/cpp/icu/common/rbbitblb.cpp
    src/main/cpp/icu/common/resbund.cpp
    src/main/cpp/icu/common/resbund_cnv.cpp
    src/main/cpp/icu/common/ruleiter.cpp
    src/main/cpp/icu/common/schriter.cpp
    src/main/cpp/icu/common/serv.cpp
    src/main/cpp/icu/common/servlk.cpp
    src/main/cpp/icu/common/servlkf.cpp
    src/main/cpp/icu/common/servls.cpp
    src/main/cpp/icu/common/servnotf.cpp
    src/main/cpp/icu/common/servrbf.cpp
    src/main/cpp/icu/common/servslkf.cpp
    src/main/cpp/icu/common/stringpiece.cpp
    src/main/cpp/icu/common/ubrk.cpp
    src/main/cpp/icu/common/ucase.cpp
    src/main/cpp/icu/common/ucasemap.cpp
    src/main/cpp/icu/common/ucasemap_titlecase_brkiter.cpp
    src/main/cpp/icu/common/ucharstrie.cpp
    src/main/cpp/icu/common/uchriter.cpp
    src/main/cpp/icu/common/ucnv2022.cpp
    src/main/cpp/icu/common/ucnvbocu.cpp
    src/main/cpp/icu/common/ucnvsel.cpp
    src/main/cpp/icu/common/ucnv_bld.cpp
    src/main/cpp/icu/common/ucnv_ext.cpp
    src/main/cpp/icu/common/ucnv_io.cpp
    src/main/cpp/icu/common/ucol_swp.cpp
    src/main/cpp/icu/common/udata.cpp
    src/main/cpp/icu/common/uhash_us.cpp
    src/main/cpp/icu/common/uidna.cpp
    src/main/cpp/icu/common/uinit.cpp
    src/main/cpp/icu/common/uiter.cpp
    src/main/cpp/icu/common/uloc.cpp
    src/main/cpp/icu/common/umutex.cpp
    src/main/cpp/icu/common/unames.cpp
    src/main/cpp/icu/common/unifilt.cpp
    src/main/cpp/icu/common/unifunct.cpp
    src/main/cpp/icu/common/uniset.cpp
    src/main/cpp/icu/common/uniset_closure.cpp
    src/main/cpp/icu/common/uniset_props.cpp
    src/main/cpp/icu/common/unisetspan.cpp
    src/main/cpp/icu/common/unistr.cpp
    src/main/cpp/icu/common/unistr_case.cpp
    src/main/cpp/icu/common/unistr_case_locale.cpp
    src/main/cpp/icu/common/unistr_cnv.cpp
    src/main/cpp/icu/common/unistr_props.cpp
    src/main/cpp/icu/common/unistr_titlecase_brkiter.cpp
    src/main/cpp/icu/common/unorm.cpp
    src/main/cpp/icu/common/unormcmp.cpp
    src/main/cpp/icu/common/uobject.cpp
    src/main/cpp/icu/common/uprops.cpp
    src/main/cpp/icu/common/uresbund.cpp
    src/main/cpp/icu/common/uset.cpp
    src/main/cpp/icu/common/usetiter.cpp
    src/main/cpp/icu/common/uset_props.cpp
    src/main/cpp/icu/common/ushape.cpp
    src/main/cpp/icu/common/usprep.cpp
    src/main/cpp/icu/common/ustack.cpp
    src/main/cpp/icu/common/ustrcase.cpp
    src/main/cpp/icu/common/ustrcase_locale.cpp
    src/main/cpp/icu/common/ustrenum.cpp
    src/main/cpp/icu/common/ustring.cpp
    src/main/cpp/icu/common/ustrtrns.cpp
    src/main/cpp/icu/common/ustr_titlecase_brkiter.cpp
    src/main/cpp/icu/common/ustr_wcs.cpp
    src/main/cpp/icu/common/utext.cpp
    src/main/cpp/icu/common/util.cpp
    src/main/cpp/icu/common/util_props.cpp
    src/main/cpp/icu/common/utrie.cpp
    src/main/cpp/icu/common/utrie2.cpp
    src/main/cpp/icu/common/utrie2_builder.cpp
    src/main/cpp/icu/common/uvector.cpp
    src/main/cpp/icu/common/uvectr32.cpp
    src/main/cpp/icu/common/uvectr64.cpp
    src/main/cpp/icu/i18n/astro.cpp
    src/main/cpp/icu/i18n/buddhcal.cpp
    src/main/cpp/icu/i18n/basictz.cpp
    src/main/cpp/icu/i18n/bocsu.cpp
    src/main/cpp/icu/i18n/calendar.cpp
    src/main/cpp/icu/i18n/cecal.cpp
    src/main/cpp/icu/i18n/chnsecal.cpp
    src/main/cpp/icu/i18n/choicfmt.cpp
    src/main/cpp/icu/i18n/coleitr.cpp
    src/main/cpp/icu/i18n/coll.cpp
    src/main/cpp/icu/i18n/coptccal.cpp
    src/main/cpp/icu/i18n/curramt.cpp
    src/main/cpp/icu/i18n/currpinf.cpp
    src/main/cpp/icu/i18n/currunit.cpp
    src/main/cpp/icu/i18n/dangical.cpp
    src/main/cpp/icu/i18n/datefmt.cpp
    src/main/cpp/icu/i18n/dcfmtsym.cpp
    src/main/cpp/icu/i18n/decfmtst.cpp
    src/main/cpp/icu/i18n/decimfmt.cpp
    src/main/cpp/icu/i18n/digitlst.cpp
    src/main/cpp/icu/i18n/dtfmtsym.cpp
    src/main/cpp/icu/i18n/dtrule.cpp
    src/main/cpp/icu/i18n/ethpccal.cpp
    src/main/cpp/icu/i18n/fmtable.cpp
    src/main/cpp/icu/i18n/format.cpp
    src/main/cpp/icu/i18n/fphdlimp.cpp
    src/main/cpp/icu/i18n/fpositer.cpp
    src/main/cpp/icu/i18n/gregocal.cpp
    src/main/cpp/icu/i18n/gregoimp.cpp
    src/main/cpp/icu/i18n/hebrwcal.cpp
    src/main/cpp/icu/i18n/indiancal.cpp
    src/main/cpp/icu/i18n/inputext.cpp
    src/main/cpp/icu/i18n/locdspnm.cpp
    src/main/cpp/icu/i18n/islamcal.cpp
    src/main/cpp/icu/i18n/japancal.cpp
    src/main/cpp/icu/i18n/measure.cpp
    src/main/cpp/icu/i18n/msgfmt.cpp
    src/main/cpp/icu/i18n/nfrs.cpp
    src/main/cpp/icu/i18n/nfrule.cpp
    src/main/cpp/icu/i18n/nfsubs.cpp
    src/main/cpp/icu/i18n/numfmt.cpp
    src/main/cpp/icu/i18n/numsys.cpp
    src/main/cpp/icu/i18n/olsontz.cpp
    src/main/cpp/icu/i18n/persncal.cpp
    src/main/cpp/icu/i18n/plurfmt.cpp
    src/main/cpp/icu/i18n/plurrule.cpp
    src/main/cpp/icu/i18n/rbnf.cpp
    src/main/cpp/icu/i18n/rbtz.cpp
    src/main/cpp/icu/i18n/reldtfmt.cpp
    src/main/cpp/icu/i18n/selfmt.cpp
    src/main/cpp/icu/i18n/simpletz.cpp
    src/main/cpp/icu/i18n/smpdtfmt.cpp
    src/main/cpp/icu/i18n/smpdtfst.cpp
    src/main/cpp/icu/i18n/sortkey.cpp
    src/main/cpp/icu/i18n/taiwncal.cpp
    src/main/cpp/icu/i18n/tblcoll.cpp
    src/main/cpp/icu/i18n/timezone.cpp
    src/main/cpp/icu/i18n/tzfmt.cpp
    src/main/cpp/icu/i18n/tzgnames.cpp
    src/main/cpp/icu/i18n/tznames.cpp
    src/main/cpp/icu/i18n/tznames_impl.cpp
    src/main/cpp/icu/i18n/tztrans.cpp
    src/main/cpp/icu/i18n/tzrule.cpp
    src/main/cpp/icu/i18n/ucal.cpp
    src/main/cpp/icu/i18n/ucol.cpp
    src/main/cpp/icu/i18n/ucol_bld.cpp
    src/main/cpp/icu/i18n/ucol_cnt.cpp
    src/main/cpp/icu/i18n/ucol_elm.cpp
    src/main/cpp/icu/i18n/ucol_res.cpp
    src/main/cpp/icu/i18n/ucol_sit.cpp
    src/main/cpp/icu/i18n/ucol_tok.cpp
    src/main/cpp/icu/i18n/ucol_wgt.cpp
    src/main/cpp/icu/i18n/ucoleitr.cpp
    src/main/cpp/icu/i18n/ucurr.cpp
    src/main/cpp/icu/i18n/ulocdata.c
    src/main/cpp/icu/i18n/umsg.cpp
    src/main/cpp/icu/i18n/vtzone.cpp
    src/main/cpp/icu/i18n/zonemeta.cpp
    src/main/cpp/icu/tools/toolutil/dbgutil.cpp
    src/main/cpp/icu/tools/toolutil/toolutil.cpp
    src/main/cpp/icu/tools/toolutil/udbgutil.cpp
)


find_library( log-lib log )

target_link_libraries( testicuuc ${log-lib} m )
target_link_libraries( testmain ${log-lib} testicuuc )
